assets/css/style.css
/* Google fonts import*/
@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");

/* Asterisk wildcard selector to override default styles added by the browser */

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* General styling */

body {
  display: flex;
  color: #070b2d;
  font-family: "lexend", sans-serif;
  min-height: 100vh;
  background-color: #561a58;
  flex-direction: column;
}

h1,
h2,
h3 {
  text-transform: capitalize;
}

/* Header */
header {
  background-color: #070b2d;
  padding: 5px 1rem;
  width: 100%;
  display: flex;
  color: #b9daf4;
  position: fixed;
  justify-content: space-between;
  align-items: baseline;
  z-index: 99;
}

header a {
  text-decoration: none;
  color: inherit;
}

#menu {
  font-size: 100%;
  letter-spacing: 2px;
  list-style-type: none;
}

#menu > li {
  margin-bottom: 1em;
}

/* Makes the active page underlined */
.active {
  border-bottom: 1px solid #b9daf4;
}

/* Navbar styles with dropdown toggle */
nav {
  position: absolute;
  background-color: #070b2d;
  width: 100%;
  left: 0;
  padding: 7px 1rem;
  display: none;
  top: 100%;
}

/* Nav toggle */
#nav-toggle:checked ~ nav {
  display: block;
}

#nav-toggle {
  display: none;
}

.nav-toggle-label {
  font-size: 2rem;
}

/* Main content */
main {
  display: flex;
  flex: 1 0 auto;
  margin-top: 90px;
  flex-direction: column;
  position: absolute;
  min-height: 100vh;
  padding-bottom: 3.5rem;
  justify-content: center;
}
/* Styling for index.html */
#homepage {
  background: url(../images/singer-in-the-front-large.webp) no-repeat top
    center/cover;
  width: 100%;
  min-height: 100vh;
  position: relative;
}
#homepage > div {
  background-color: rgba(273, 17, 217, 0.8);
  margin: 5%;
  text-align: center;
  line-height: 1.5rem;
  font-size: 100%;
}
#homepage div {
  padding: 20px;
  letter-spacing: 1px;
}
#we-got-you li {
  list-style-type: none;
  padding: 10px;
}
/* Styling for about.html */
#bandpicture {
  display: flex;
  background: url(../images/band-sitting.webp) no-repeat center center/cover;
  position: relative;
  flex-direction: column;
  width: 100%;
  padding: 10px;
  min-height: 380px;
  box-shadow: 0 5px 10px #070b2d;
}
#about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 10px;
  align-content: center;
}
.who-are-we {
  background-color: rgba(273, 17, 217, 0.7);
  color: #070b2d;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  padding: 10px;
  margin: 10px;
  width: 90%;
  height: auto;
  box-shadow: 0 5px 5px #070b2d;
}
/* Styling for contact.html */
#contact {
  background: url(../images/singer-on-shoulders.webp) no-repeat center
    center/cover;
  display: flex;
  line-height: 2rem;
  padding: 20px;
  width: 100%;
  flex-direction: column;
}
form {
  background-color: rgba(273, 17, 217, 0.7);
  padding: 20px;
  border: 1px solid #070b2d;
}
#contact div {
  padding: 5px 0;
}
.text-input {
  height: 36px;
  width: 100%;
  border: 1px solid #070b2d;
  border-radius: 5px;
}
#lets-party {
  display: flex;
  flex-direction: column;
  align-items: center;
}
button {
  background-color: #070b2d;
  color: #b9daf4;
  padding: 5%;
  font-family: "Lexend";

  border-radius: 5px;
  font-size: 130%;
  width: 50%;
}
#e-mail-number {
  border: 1px solid #070b2d;
  margin: auto;
  text-align: center;
  background-color: rgba(273, 17, 217, 0.7);
  width: 220px;
  margin-top: 10px;
}
#e-mail-number li {
  list-style-type: none;
}
#e-mail-number a {
  text-decoration: none;
  color: #070b2d;
}
/* Styling for thankyou.html */
#thank-you {
  background: url(../images/mingelbild-holidaymorgan.webp) no-repeat center
    center/cover;
  width: 100%;
  position: fixed;
  min-height: 100vh;
}
#thank-you div {
  background-color: rgba(273, 17, 217, 0.7);
  text-align: center;
  padding: 5% 1%;
  margin: 50% 0;
}
/* Styling for 404.html */
#error {
  width: 100%;
  min-height: 100vh;
  position: fixed;
}
#error div {
  background-color: rgba(273, 17, 217, 0.7);
  box-shadow: 0 5px 5px #070b2d;
  text-align: center;
  letter-spacing: 2px;
  margin: 50% 0;
  padding: 10% 0;
  font-size: 200%;
}
/* Footer */
footer {
  background-color: #070b2d;
  color: #b9daf4;
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 3.5rem;
}
#contact-info {
  color: #b9daf4;
  display: flex;
  width: 100%;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 10px;
  gap: 10px;
}

#contact-info i {
  font-size: 150%;
  padding: 10%;
  color: #b9daf4;
}

.social-media {
  display: flex;
  width: auto;
  flex-grow: 1;
  flex-direction: column;
  flex-wrap: wrap;
  align-content: center;
}
/* Media query: medium phones (326px and up) */
@media screen and (min-width: 326px) {
  main {
    margin-top: 50px;
  }
}
/* Media query: large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {
  #contact {
    width: 576px;
  }
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {
  /* Header */
  nav {
    display: flex;
    position: relative;
    width: 55%;
    padding-right: 1rem;
    font-size: 90%;
    justify-content: flex-end;
  }

  #menu {
    display: flex;
  }

  #menu > li {
    padding-left: 1rem;
  }

  .nav-toggle-label {
    display: none;
  }

  header h1 {
    font-size: 240%;
    line-height: 75px;
    margin: 0 0.5rem;
  }

  /* Main content */
  main {
    /* Push main content down */
    margin-top: 85px;
  }
  /* About the band */
  #bandpicture {
    position: relative;
    background-position: top;
  }

  /* Contact Us */
  #contact {
    width: 90%;
    position: relative;
    margin: 0 50%;
  }
  button:hover {
    background-color: #ed11d9;
    color: #070b2d;
  }
}

/* Large devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
  #menu a:hover {
    border: 2px outset #b9daf4;
  }

  /* Homepage */
  #homepage {
    font-size: 150%;
  }
  /* About page */
  #bandpicture {
    margin-top: -100px;
  }
  /* Contact Us Page */
  #contact {
    margin: 0 251px;
    width: 490px;
  }
}

@media screen and (min-width: 1200px) {
  /* Contact Page */
  #contact {
    margin: 0 355px;
  }
}

